[gd_scene load_steps=13 format=3 uid="uid://cddf0mcftnade"]

[ext_resource type="Script" path="res://Scripts/menuInicio.gd" id="1_qx0cr"]
[ext_resource type="FontFile" uid="uid://bwiwauajgf7lg" path="res://Fuentes/FatPix-SVG.ttf" id="2_n04yf"]
[ext_resource type="PackedScene" uid="uid://cdv4y6p8rbj1u" path="res://Personajes/maloDanzarin.tscn" id="4_s28rl"]
[ext_resource type="Material" uid="uid://cm2cxjf5lv7m4" path="res://Materiales/material_muro.tres" id="8_3ii1j"]
[ext_resource type="AudioStream" uid="uid://bamvjd0yiepwd" path="res://Sonido/intro_loop.wav" id="9_71icu"]
[ext_resource type="PackedScene" uid="uid://c3tccnvr04hli" path="res://Assets/camara_movil.tscn" id="12_ewaik"]
[ext_resource type="FontFile" uid="uid://7q57p22486x8" path="res://Fuentes/DungeonFont.ttf" id="14_qaxmf"]
[ext_resource type="PackedScene" uid="uid://b07t7i5xmj2iv" path="res://Assets/cofre.tscn" id="15_l48wy"]
[ext_resource type="Material" uid="uid://nbdl4vgnhja5" path="res://Materiales/material_suelo.tres" id="16_r6ama"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_rhu52"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_3y581"]
sky_material = SubResource("ProceduralSkyMaterial_rhu52")

[sub_resource type="Environment" id="Environment_4vg14"]
background_mode = 2
sky = SubResource("Sky_3y581")
tonemap_mode = 2
glow_enabled = true

[node name="menuInicio" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qx0cr")

[node name="tituloJuego" type="Label" parent="."]
layout_mode = 0
offset_left = 204.0
offset_right = 1671.0
offset_bottom = 403.0
theme_override_colors/font_color = Color(0.981407, 0.102533, 0.827977, 1)
theme_override_fonts/font = ExtResource("14_qaxmf")
theme_override_font_sizes/font_size = 190
text = "The treasure of the
Labyrinth Temple"
horizontal_alignment = 1

[node name="BotonJugar" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 701.0
offset_top = -495.0
offset_right = 901.0
offset_bottom = -444.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.856933, 0.850755, 0.163376, 1)
theme_override_fonts/font = ExtResource("2_n04yf")
theme_override_font_sizes/font_size = 42
text = "Jugar
"

[node name="BotonOpciones" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 706.0
offset_top = -398.0
offset_right = 906.0
offset_bottom = -347.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.854902, 0.85098, 0.164706, 1)
theme_override_fonts/font = ExtResource("2_n04yf")
theme_override_font_sizes/font_size = 42
text = "Opciones"

[node name="BotonInstrucciones" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 679.0
offset_top = -314.0
offset_right = 933.0
offset_bottom = -263.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.854902, 0.85098, 0.164706, 1)
theme_override_fonts/font = ExtResource("2_n04yf")
theme_override_font_sizes/font_size = 42
text = "Como Jugar"

[node name="BotonSalir" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 712.0
offset_top = -218.0
offset_right = 912.0
offset_bottom = -167.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.854902, 0.85098, 0.164706, 1)
theme_override_fonts/font = ExtResource("2_n04yf")
theme_override_font_sizes/font_size = 42
text = "Salir"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_4vg14")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-4.25816e-08, -0.730699, 0.6827, 9.87381e-09, 0.6827, 0.730699, -1, 3.78552e-08, -2.18557e-08, 7.31192, 9.26935, -1.65272)

[node name="ObjetosNivel" type="Node" parent="."]

[node name="Muro" type="Node" parent="ObjetosNivel"]

[node name="1 Muro3D275" type="CSGBox3D" parent="ObjetosNivel/Muro"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.194809, 4.24945, 7.26958)
use_collision = true
size = Vector3(13.0168, 8.19519, 0.438965)
material = ExtResource("8_3ii1j")
metadata/_edit_group_ = true

[node name="1 Muro3D276" type="CSGBox3D" parent="ObjetosNivel/Muro"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -6.54692, 4.24945, 0.159509)
use_collision = true
size = Vector3(13.7819, 8.19519, 0.438965)
material = ExtResource("8_3ii1j")
metadata/_edit_group_ = true

[node name="1 Muro3D310" type="CSGBox3D" parent="ObjetosNivel/Muro"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0117586, 4.24945, -6.951)
use_collision = true
size = Vector3(13.5565, 8.19519, 0.438965)
material = ExtResource("8_3ii1j")
metadata/_edit_group_ = true

[node name="Assets" type="Node" parent="ObjetosNivel"]

[node name="maloDanzarin" parent="ObjetosNivel/Assets" instance=ExtResource("4_s28rl")]
transform = Transform3D(-0.258819, 0, 0.965926, 0, 1, 0, -0.965926, 0, -0.258819, 0, 0.157582, 1)

[node name="Cofre" parent="ObjetosNivel/Assets" instance=ExtResource("15_l48wy")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0.0149798, 0.118779, -1.76415)

[node name="suelo" type="CSGBox3D" parent="ObjetosNivel"]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, -0.00177145, -0.06543, 0.0990262)
use_collision = true
size = Vector3(1.35894, 0.043457, 1.47052)
material = ExtResource("16_r6ama")

[node name="maloDanzarin" parent="." instance=ExtResource("12_ewaik")]
transform = Transform3D(0.00963406, 0, 0.999954, 0, 1, 0, -0.999954, 0, 0.00963406, 4.6964, 1.15185, -1.668)

[node name="creditos" type="Label" parent="."]
layout_mode = 0
offset_left = 494.0
offset_top = 1027.0
offset_right = 1411.0
offset_bottom = 1070.0
theme_override_fonts/font = ExtResource("2_n04yf")
theme_override_font_sizes/font_size = 20
text = "TFG VIDEOJUEGOS GRADO MULTIMEDIA DE LA UOC
(C) JUAN MANUEL LOPEZ DIAZ , 2024"
horizontal_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_71icu")
volume_db = -3.0
autoplay = true
max_polyphony = 6
bus = &"BSO"

[connection signal="pressed" from="BotonJugar" to="." method="_on_boton_jugar_pressed"]
[connection signal="pressed" from="BotonOpciones" to="." method="_on_boton_opciones_pressed"]
[connection signal="pressed" from="BotonInstrucciones" to="." method="_on_boton_instrucciones_pressed"]
[connection signal="pressed" from="BotonSalir" to="." method="_on_boton_salir_pressed"]
